# presentations_scheduler

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Presentation_8cpp.html  Presentation_8h.html  Presentation_8h.js  Presentation_8h_source.html  README.md  Room_8cpp.html  Room_8h.html  Room_8h.js  Room_8h_source.html  Scheduler_8cpp.html  Scheduler_8h.html  Scheduler_8h.js  Scheduler_8h_source.html  Student_8cpp.html  Student_8h.html  Student_8h.js  Student_8h_source.html  Teacher_8cpp.html  Teacher_8h.html  Teacher_8h.js  Teacher_8h_source.html  Utils_8cpp.html  Utils_8h.html  Utils_8h.js  Utils_8h_source.html  annotated.html  annotated_dup.js  classes.html  config_8cpp.html  config_8cpp.js  config_8h.html  config_8h.js  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+43 more)
coverage-report/: index.Presentation.cpp.6f2b205a4869b09a75042072b1a52c8b.html  index.Room.cpp.dd057a251566c0d93da0e004330a8273.html  index.Scheduler.cpp.424d3728fdb7a4b57517873324d17c00.html  index.Student.cpp.9f0e00b9131b3dc451b40ada5473330a.html  index.Teacher.cpp.bb9b4da129c614ff7ced8f4671e2abd5.html  index.Utils.cpp.055ff8db56dabcf68ecd8382ba79cbed.html  index.functions.html  index.html  index.main.cpp.118fcbaaba162ba17933c7893247df3a.html
docs/: algorithm_outlines.md  greedy_scheduling_algorithm_algoforge.json  index.html  presentations_scheduler_algorithm_algoforge.json
include/: Presentation.h  Room.h  Scheduler.h  Student.h  Teacher.h  Tutor.h  Utils.h  config.h  globalConsts.h
search/: all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  (+34 more)
(+16 files in other folders)
